RESOLVED FIXED208096
fast/forms/ios/force-gregorian-calendar-for-credit-card-expiry.html is failing in iOS 13.4 beta
https://bugs.webkit.org/show_bug.cgi?id=208096
Summary fast/forms/ios/force-gregorian-calendar-for-credit-card-expiry.html is failin...
Wenson Hsieh
Reported 2020-02-22 15:32:18 PST
Attachments
Patch (13.59 KB, patch)
2020-02-22 15:44 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-02-22 15:44:03 PST
Wenson Hsieh
Comment 2 2020-02-22 17:46:09 PST
Comment on attachment 391469 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 3 2020-02-22 18:30:11 PST
Comment on attachment 391469 [details] Patch Clearing flags on attachment: 391469 Committed r257187: <https://trac.webkit.org/changeset/257187>
WebKit Commit Bot
Comment 4 2020-02-22 18:30:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.